--- a/package.json
+++ b/package.json
@@ -40,23 +40,26 @@
     "@tailwindcss/postcss": "^4.1.17",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/table-core": "^8.21.3",
-    "@types/node": "^24.10.2",
+    "@types/node": "^24.10.3",
     "@types/turndown": "^5.0.6",
     "@types/umami": "^2.10.1",
+    "bits-ui": "^2.14.4",
+    "clsx": "^2.1.1",
     "drizzle-kit": "^0.31.8",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-oxlint": "^1.32.0",
     "eslint-plugin-svelte": "^3.13.1",
     "globals": "^16.5.0",
-    "knip": "^5.72.0",
+    "knip": "^5.73.1",
     "oxfmt": "^0.17.0",
     "oxlint": "^1.32.0",
-    "oxlint-tsgolint": "^0.8.4",
+    "oxlint-tsgolint": "^0.8.5",
     "pino-pretty": "^13.1.3",
     "prettier": "^3.7.4",
     "prettier-plugin-svelte": "^3.4.0",
     "prettier-plugin-tailwindcss": "^0.7.2",
+    "runed": "^0.36.0",
     "sonda": "^0.10.1",
     "super-sitemap": "^1.0.5",
     "svelte": "5.45.8",
@@ -67,6 +70,7 @@
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.49.0",
+    "vaul-svelte": "1.0.0-next.7",
     "vite": "8.0.0-beta.1",
     "vite-node": "^5.2.0"
   },
@@ -76,22 +80,19 @@
     }
   },
   "dependencies": {
-    "@better-auth/passkey": "^1.4.3",
+    "@better-auth/passkey": "1.4.3",
     "@neondatabase/serverless": "^1.0.2",
     "@qwik.dev/partytown": "^0.11.2",
     "@sentry/sveltekit": "^10.29.0",
     "@unpic/svelte": "^1.0.1",
     "@upstash/redis": "^1.35.7",
-    "better-auth": "^1.4.3",
-    "bits-ui": "^2.14.4",
-    "clsx": "^2.1.1",
-    "drizzle-orm": "^0.45.0",
+    "better-auth": "1.4.3",
+    "drizzle-orm": "^0.45.1",
     "drizzle-zod": "^0.8.3",
     "mode-watcher": "^1.1.0",
     "pino": "^9.14.0",
     "qrcode-generator": "^2.0.4",
-    "resend": "^6.5.2",
-    "runed": "^0.37.0",
+    "resend": "^6.6.0",
     "svelte-meta-tags": "^4.5.0",
     "svelte-sonner": "^1.0.7",
     "zod": "^4.1.13"
