--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
     "knip": "knip",
     "lint": "oxlint --type-aware && eslint . && prettier --check --experimental-cli .",
     "format": "prettier . --write --experimental-cli",
@@ -43,6 +46,7 @@
     "@types/node": "^24.10.9",
     "@types/turndown": "^5.0.6",
     "@types/umami": "^2.10.1",
+    "@vitest/ui": "^4.0.18",
     "@zxcvbn-ts/core": "^3.0.4",
     "@zxcvbn-ts/language-common": "^3.0.4",
     "@zxcvbn-ts/language-en": "^3.0.2",
@@ -76,7 +80,8 @@
     "typescript-eslint": "^8.53.0",
     "vaul-svelte": "1.0.0-next.7",
     "vite": "8.0.0-beta.8",
-    "vite-node": "^5.3.0"
+    "vite-node": "^5.3.0",
+    "vitest": "^4.0.18"
   },
   "pnpm": {
     "overrides": {
@@ -95,6 +100,7 @@
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.45.1",
     "drizzle-zod": "^0.8.3",
+    "marked": "^17.0.2",
     "mode-watcher": "^1.1.0",
     "pino": "^9.14.0",
     "resend": "^6.7.0",
