--- a/package.json
+++ b/package.json
@@ -29,46 +29,46 @@
     "node": ">=24.11.0"
   },
   "devDependencies": {
-    "@dotenvx/dotenvx": "^1.51.4",
-    "@eslint/compat": "^2.0.1",
-    "@eslint/js": "^9.39.2",
-    "@iconify-json/lucide": "^1.2.86",
+    "@dotenvx/dotenvx": "^1.52.0",
+    "@eslint/compat": "^2.0.2",
+    "@eslint/js": "^10.0.1",
+    "@iconify-json/lucide": "^1.2.90",
     "@iconify/tailwind4": "^1.2.1",
-    "@internationalized/date": "^3.10.1",
+    "@internationalized/date": "^3.11.0",
     "@prettier/plugin-oxc": "^0.1.3",
-    "@sveltejs/adapter-vercel": "^6.3.0",
-    "@sveltejs/kit": "^2.50.0",
+    "@sveltejs/adapter-vercel": "^6.3.1",
+    "@sveltejs/kit": "^2.52.0",
     "@sveltejs/vite-plugin-svelte": "^6.2.4",
     "@tailwindcss/forms": "^0.5.11",
     "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/table-core": "^8.21.3",
-    "@types/node": "^24.10.9",
+    "@types/node": "^24.10.13",
     "@types/turndown": "^5.0.6",
     "@types/umami": "^2.10.1",
     "@vitest/ui": "^4.0.18",
     "@zxcvbn-ts/core": "^3.0.4",
     "@zxcvbn-ts/language-common": "^3.0.4",
     "@zxcvbn-ts/language-en": "^3.0.2",
-    "drizzle-kit": "^0.31.8",
-    "eslint": "^9.39.2",
+    "drizzle-kit": "1.0.0-beta.12-a5629fb",
+    "eslint": "^10.0.0",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-oxlint": "^1.39.0",
-    "eslint-plugin-svelte": "^3.14.0",
-    "globals": "^16.5.0",
+    "eslint-plugin-oxlint": "^1.46.0",
+    "eslint-plugin-svelte": "^3.15.0",
+    "globals": "^17.3.0",
     "isomorphic-dompurify": "2.26.0",
-    "knip": "^5.81.0",
-    "oxfmt": "^0.24.0",
-    "oxlint": "^1.39.0",
-    "oxlint-tsgolint": "^0.11.1",
+    "knip": "^5.83.1",
+    "oxfmt": "^0.32.0",
+    "oxlint": "^1.47.0",
+    "oxlint-tsgolint": "^0.12.2",
     "pino-pretty": "^13.1.3",
-    "prettier": "^3.8.0",
+    "prettier": "^3.8.1",
     "prettier-plugin-svelte": "^3.4.1",
     "prettier-plugin-tailwindcss": "^0.7.2",
-    "sonda": "^0.10.1",
-    "super-sitemap": "^1.0.6",
-    "svelte": "5.46.4",
-    "svelte-check": "^4.3.5",
+    "sonda": "^0.10.2",
+    "super-sitemap": "^1.0.7",
+    "svelte": "^5.51.1",
+    "svelte-check": "^4.4.0",
     "svelte-toolbelt": "^0.10.6",
     "svelte-turnstile": "^0.11.0",
     "sveltekit-flash-message": "^2.4.6",
@@ -77,37 +77,37 @@
     "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.53.0",
+    "typescript-eslint": "^8.55.0",
     "vaul-svelte": "1.0.0-next.7",
-    "vite": "8.0.0-beta.8",
+    "vite": "8.0.0-beta.13",
     "vite-node": "^5.3.0",
     "vitest": "^4.0.18"
   },
   "pnpm": {
     "overrides": {
-      "vite": "8.0.0-beta.8"
+      "vite": "8.0.0-beta.13"
     }
   },
   "dependencies": {
-    "@better-auth/passkey": "^1.4.15",
+    "@better-auth/passkey": "^1.4.18",
     "@neondatabase/serverless": "^1.0.2",
     "@qwik.dev/partytown": "^0.11.2",
-    "@sentry/sveltekit": "^10.34.0",
+    "@sentry/sveltekit": "^10.38.0",
     "@unpic/svelte": "^1.0.1",
-    "@upstash/redis": "^1.36.1",
-    "better-auth": "^1.4.15",
-    "bits-ui": "^2.15.4",
+    "@upstash/redis": "^1.36.2",
+    "better-auth": "^1.4.18",
+    "bits-ui": "^2.15.5",
     "clsx": "^2.1.1",
-    "drizzle-orm": "^0.45.1",
+    "drizzle-orm": "1.0.0-beta.12-a5629fb",
     "drizzle-zod": "^0.8.3",
     "marked": "^17.0.2",
     "mode-watcher": "^1.1.0",
-    "pino": "^9.14.0",
-    "resend": "^6.7.0",
+    "pino": "^10.3.1",
+    "resend": "^6.9.2",
     "runed": "^0.37.1",
     "svelte-meta-tags": "^4.5.0",
     "svelte-sonner": "^1.0.7",
     "unpic": "^4.2.2",
-    "zod": "^4.3.5"
+    "zod": "^4.3.6"
   }
 }
